Bug 459150 - "wrong url" when trying to open a locally stored PDF file
Summary: "wrong url" when trying to open a locally stored PDF file
Status: RESOLVED FIXED
Alias: None
Product: KBibTeX
Classification: Applications
Component: Loading/saving files (other bugs)
Version First Reported In: 0.9.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Fischer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-15 10:13 UTC by Lech Łobocki
Modified: 2022-10-01 21:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lech Łobocki 2022-09-15 10:13:06 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Add a local file to a reference in KBibtex
2. Try to open it (crtl-d on highlighted item)
3. 

OBSERVED RESULT
message box comes up reporting "incorrect URL" or "wrong URL" (I am using another language) 


EXPECTED RESULT
A PDF opening, like in previously used version

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma:  Fedora 36
(available in About System)
KDE Plasma Version:  5.25
KDE Frameworks Version:  
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Fischer 2022-10-01 21:20:32 UTC
I am quit sure I have fixed this bug in commit 1153930536abe9f0331acef67dc40b18210eb07e. The bug does not exist in future KBibTeX 0.10, as there the whole code section has been rewritten.

To confirm that the bug is gone indeed, please have a look at the quick start instructions to compile KBibTeX yourself:
https://userbase.kde.org/KBibTeX/Development#Quick_Start_to_Run_KBibTeX_from_Git
Then, you can test this commit by running the latest code from branch 'kbibtex/0.9'
bash run-kbibtex.sh 'https://invent.kde.org/office/kbibtex.git' 'kbibtex/0.9'
Alternatively, you can test the code for the upcoming KBibTeX 0.10 as well:
bash run-kbibtex.sh 'https://invent.kde.org/office/kbibtex.git' 'kbibtex/0.10'
Comment 2 Thomas Fischer 2022-10-01 21:20:47 UTC
Git commit 1153930536abe9f0331acef67dc40b18210eb07e by Thomas Fischer.
Committed on 01/10/2022 at 21:15.
Pushed by thomasfischer into branch 'kbibtex/0.9'.

Fix creation of URL from user input

... when opening a document associated with a bibliographic entry.

M  +1    -1    src/parts/part.cpp

https://invent.kde.org/office/kbibtex/commit/1153930536abe9f0331acef67dc40b18210eb07e