Fix creation of URL from user input

... when opening a document associated with a bibliographic entry.

BUG: 459150